<resources>
    <string name="app_name">Egov</string>
    <string name="logostring">logo</string>
    <string name="otp_textfield">Please enter the 5-digit OTP sent to your registered phone no. and email ID to verify your account.</string>
    <string name="otp_hint">Enter OTP</string>
    <string name="otp_button_label">Resend OTP</string>
    <string name="date_label">Date</string>
    <string name="additionaldetails_label">Additional details (Required*/ 10 characters min.)</string>
    <string name="location_label">Location</string>
    <string name="status_label">Status</string>
    <string name="complaintID_label">Complaint ID</string>
    <string name="forgotpassword_hint">Enter mobile no.</string>
    <string name="forgotpassword_text">Please enter your registered phone number. A recovery message will be sent to your phone and to your registered email ID.</string>
    <string name="login_username">Email ID or Phone No.</string>
    <string name="login_password">Password</string>
    <string name="login_forgotlabel">Forgot Password?</string>
    <string name="login_buttonlabel">Create an account</string>
    <string name="submit_label">Submit</string>
    <string name="complainttype_label">Complaint Type (Required*)</string>
    <string name="complaintlocation_label">Please select complaint location on map and/or enter location name. If a picture with GPS data is added, location will automatically be set to that position.</string>
    <string name="complaintpicture_label">Please upload supporting picture(s)</string>
    <string name="propertytax_search_hint">Enter assessment number</string>
    <string name="watertax_search_hint">Enter consumer number</string>
    <string name="name_label">Name</string>
    <string name="name_label_editprofile">Name (Required*)</string>
    <string name="address_label">ADDRESS</string>
    <string name="owner_label">OWNER NAME</string>
    <string name="phone_label">Phone no.</string>
    <string name="phone_label_editprofile">Phone no. (Required*)</string>
    <string name="altphone_label">Alternate phone no.</string>
    <string name="email_label">Email ID</string>
    <string name="email_label_editprofile">Email ID (Required*)</string>
    <string name="dob_label_editprofile">Date of birth (Required*)</string>
    <string name="aadhaar_label">Aadhaar card no.</string>
    <string name="pan_label">PAN card no.</string>
    <string name="fullname_label">Full Name</string>
    <string name="password_label">Password</string>
    <string name="passwordconfirm_label">Confirm Password</string>
    <string name="registerbutton_label">Register</string>
    <string name="confirm_label">Confirm</string>
    <string name="registered_info">Registered</string>
    <string name="gender_unmentioned_label">Prefer not to mention / Other</string>
    <string name="gender_female_label">Female</string>
    <string name="gender_male_label">Male</string>
    <string name="gender_label">Gender</string>
    <string name="landmark_label">Landmark</string>
    <string name="area_label">Area (Required* if location not set on map)</string>
    <string name="gallery_label">Gallery</string>
    <string name="camera_label">Camera</string>
    <string name="details_type_label">Type</string>
    <string name="history_label">History</string>
    <string name="processing_label">Processing</string>
    <string name="completed_label">Completed</string>
    <string name="rejected_label">Rejected</string>
    <string name="comment_label">Comment</string>
    <string name="action_label">Action</string>
    <string name="login_field_empty_prompt">Please enter both username and password</string>
    <string name="session_expiry_message">Session expired</string>
    <string name="otp_resent_msg">OTP Resent</string>
    <string name="account_activated_msg">Account activated</string>
    <string name="processing_msg">Processing request</string>
    <string name="menu_label">Menu</string>
    <string name="home_label">Home</string>
    <string name="grievances_label">Grievances</string>
    <string name="propertytax_label">Property Tax</string>
    <string name="profile_label">My Profile</string>
    <string name="logout_label">Logout</string>
    <string name="account_recovery_label">Account Recovery</string>
    <string name="verify_account_label">Verify Account</string>
    <string name="createaccount_label">Create An Account</string>
    <string name="egov_label">MeGov</string>
    <string name="forgot_password_prompt">Please enter your registered phone number</string>
    <string name="mobilenumber_length_prompt">Mobile number must be 10 digits</string>
    <string name="noaccount_msg">No account exists associated with this mobile number</string>
    <string name="recoverymessage_msg">Recovery message sent</string>
    <string name="grievanceupdated_msg">Grievance updated</string>
    <string name="feedback_label">Feedback</string>
    <string name="reopend_label">Re-opened</string>
    <string name="forwarded_label">Forwarded</string>
    <string name="withdrawn_label">Withdrawn</string>
    <string name="newgrievance_label">New Grievance</string>
    <string name="grievancedetails_label">Grievance Details</string>
    <string name="editprofile_label">Edit Profile</string>
    <string name="loading_label">Loading…</string>
    <string name="city_hint">Municipality</string>
    <string name="register_profile_municipality_info">Your account is specific to a municipality. You must register a new account if you wish to change to a new municipality.</string>
    <string name="splashscreen_loading">Preparing resources…</string>
    <string name="watertax_label">Water Tax</string>
    <string name="details_label">Additional details</string>
    <string name="complaint_type_label">Complaint Type (Required*)</string>
    <string name="dob_label">Date of birth</string>
    <string name="locality_label">LOCALITY</string>
    <string name="ownername_contactno_label">OWNER NAME/PHONE NO.</string>
    <string name="assessmentno_label">ASSESSMENT NO.</string>
    <string name="installments_label">Installments</string>
    <string name="consumercode_label">Consumer code</string>
    <string name="contactno_label">Contact no.</string>
    <string name="arrears_total">ARREARS TOTAL</string>
    <string name="arrears_penalty">ARREARS PENALTY</string>
    <string name="current_total">CURRENT TOTAL</string>
    <string name="current_penalty">CURRENT PENALTY</string>
    <string name="total">TOTAL</string>
    <string name="Rs">\u20B9</string>
    <string name="labelviewbreakupscreen">View Breakups</string>
    <string name="title_activity_property_tax_breakups_details">View Breakups</string>
    <string name="testdesc">However, if you are using a ViewPager for horizontal paging between tabs, you can create tabs directly from your PagerAdapter’s getPageTitle() and then connect the two together using setupWithViewPager(). This ensures that tab selection events update the ViewPager and page changes update the selected tab.

CoordinatorLayout, motion, and scrolling
Distinctive visuals are only one part of material design: motion is also an important part of making a great material designed app. While there are a lot of parts of motion in material design including touch ripples and meaningful transitions, the Design library introduces CoordinatorLayout, a layout which provides an additional level of control over touch events between child views, something which many of the components in the Design library take advantage of.

CoordinatorLayout and floating action buttons
A great example of this is when you add a FloatingActionButton as a child of your CoordinatorLayout and then pass that CoordinatorLayout to your Snackbar.make() call - instead of the snackbar displaying over the floating action button, the FloatingActionButton takes advantage of additional callbacks provided by CoordinatorLayout to automatically move upward as the snackbar animates in and returns to its position when the snackbar animates out on </string>
</resources>
