<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/propertywatertax_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/watertax_assessmentno_label"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:text="@string/consumercode_label"
        android:textSize="@dimen/field_labelSize" />

    <TextView
        android:id="@+id/watertax_assessmentno"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textColor="@color/dataLabelColor"
        android:textSize="@dimen/data_labelSize" />

    <TextView
        android:id="@+id/watertax_address_label"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:text="@string/address_label"
        android:textSize="@dimen/field_labelSize" />

    <TextView
        android:id="@+id/watertax_address"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textColor="@color/dataLabelColor"
        android:textSize="@dimen/data_labelSize" />

    <TextView
        android:id="@+id/watertax_locality_label"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:text="@string/locality_label"
        android:textSize="@dimen/field_labelSize" />

    <TextView
        android:id="@+id/watertax_locality"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textColor="@color/dataLabelColor"
        android:textSize="@dimen/data_labelSize" />

    <TextView
        android:id="@+id/watertax_name_label"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:text="@string/name_label"
        android:textSize="@dimen/field_labelSize" />

    <TextView
        android:id="@+id/watertax_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textColor="@color/dataLabelColor"
        android:textSize="@dimen/data_labelSize" />

    <TextView
        android:id="@+id/watertax_contact_label"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:text="@string/contactno_label"
        android:textSize="@dimen/field_labelSize" />

    <TextView
        android:id="@+id/watertax_contact"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textColor="@color/dataLabelColor"
        android:textSize="@dimen/data_labelSize" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:text="@string/installments_label"
        android:textSize="@dimen/field_labelSize" />

</LinearLayout>