<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/editprofile_image"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginBottom="12dp"
            android:background="@color/button_material_light"
            android:scaleType="fitCenter"
            android:src="@drawable/profile" />

        <LinearLayout
            android:id="@+id/editprofile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editprofile_image"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="8dp">


            <Spinner
                android:id="@+id/editprofile_municipality"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/top_edittext" />

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#BFffffff"
                android:gravity="center_horizontal"
                android:paddingTop="5dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/middle_edittext"
                android:paddingTop="5dp">

                <EditText
                    android:id="@+id/editprofile_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:drawableLeft="@drawable/ic_call_black_24dp"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_call_black_24dp"
                    android:ems="10"
                    android:hint="@string/name_label_editprofile"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColorHint="#a8a5a5"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/middle_edittext">

                <EditText
                    android:id="@+id/editprofile_phoneno"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:drawableLeft="@drawable/ic_call_black_24dp"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_call_black_24dp"
                    android:ems="10"
                    android:hint="@string/phone_label_editprofile"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColorHint="#a8a5a5"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/middle_edittext">

                <EditText
                    android:id="@+id/editprofile_altphoneno"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:drawableLeft="@drawable/ic_call_black_24dp"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_call_black_24dp"
                    android:ems="10"
                    android:hint="@string/altphone_label"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColorHint="#a8a5a5"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/editprofile_gender"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/middle_edittext"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_male"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/gender_male_label" />

                <RadioButton
                    android:id="@+id/radioButton_female"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/gender_female_label" />

                <RadioButton
                    android:id="@+id/radioButton_others"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/gender_unmentioned_label" />

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/middle_edittext">

                <EditText
                    android:id="@+id/editprofile_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:drawableLeft="@drawable/ic_mail_black_24dp"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_mail_black_24dp"
                    android:ems="10"
                    android:hint="@string/email_label_editprofile"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColorHint="#a8a5a5"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/middle_edittext">

                <EditText
                    android:id="@+id/editprofile_dateofbirth"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:drawableLeft="@drawable/ic_today_black_24dp"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_today_black_24dp"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/dob_label_editprofile"
                    android:inputType="date"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColorHint="#a8a5a5"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/middle_edittext">

                <EditText
                    android:id="@+id/editprofile_PANcardno"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableLeft="@drawable/ic_credit_card_black_24dp"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_credit_card_black_24dp"
                    android:ems="10"
                    android:hint="@string/pan_label"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColorHint="#a8a5a5"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_edittext">

                <EditText
                    android:id="@+id/editprofile_aadhaarcardno"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableLeft="@drawable/ic_credit_card_black_24dp"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_credit_card_black_24dp"
                    android:ems="10"
                    android:hint="@string/aadhaar_label"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColorHint="#a8a5a5"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/editprofile_changeimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editprofile_layout"
            android:layout_alignRight="@+id/editprofile_layout"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="212dp"
            android:src="@drawable/ic_camera_alt_white_24dp" />

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/editprofile_changeimagecompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editprofile_layout"
            android:layout_alignRight="@+id/editprofile_layout"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="212dp"
            android:src="@drawable/ic_camera_alt_white_24dp"
            android:visibility="gone"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorPrimary"
            app:fab_colorRipple="#000" />

    </RelativeLayout>
</ScrollView>