<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/details_defaultimage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/complaint_default"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/details_imageslayout"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <android.support.v4.view.ViewPager
                android:id="@+id/details_complaint_image"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <com.viewpagerindicator.LinePageIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                app:lineWidth="30dp"
                app:selectedColor="@color/colorAccent"
                app:strokeWidth="4dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/details_complaintNo_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/complaintID_label"
                android:textSize="@dimen/field_labelsize" />

            <TextView
                android:id="@+id/details_complaintNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dataLabelColor"
                android:textSize="@dimen/data_labelsize" />

            <TextView
                android:id="@+id/details_complaint_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_label"
                android:textSize="@dimen/field_labelsize" />

            <TextView
                android:id="@+id/details_complaint_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:textColor="@color/dataLabelColor"
                android:textSize="@dimen/data_labelsize" />

            <TextView
                android:id="@+id/details_complaint_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/type_label"
                android:textSize="@dimen/field_labelsize" />

            <TextView
                android:id="@+id/details_complaint_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dataLabelColor"
                android:textSize="@dimen/data_labelsize" />

            <TextView
                android:id="@+id/details_complaint_details_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/additionaldetails_label"
                android:textSize="@dimen/field_labelsize" />

            <TextView
                android:id="@+id/details_complaint_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dataLabelColor"
                android:textSize="@dimen/data_labelsize" />

            <TextView
                android:id="@+id/details_complaint_location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/location_label"
                android:textSize="@dimen/field_labelsize" />

            <TextView
                android:id="@+id/details_complaint_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dataLabelColor"
                android:textSize="@dimen/data_labelsize" />

            <TextView
                android:id="@+id/details_complaint_status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/status_label"
                android:textSize="@dimen/field_labelsize" />

            <TextView
                android:id="@+id/details_complaint_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dataLabelColor"
                android:textSize="@dimen/data_labelsize" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
